--- a/package.json
+++ b/package.json
@@ -205,7 +205,9 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.15.0",
     "babel-polyfill": "6.13.0",
+    "bookshelf": "^0.10.2",
     "chalk": "1.1.3",
     "compression": "1.6.2",
     "cross-env": "2.0.1",
@@ -215,6 +217,7 @@
     "intl": "1.2.4",
     "invariant": "2.2.1",
     "ip": "1.1.3",
+    "knex": "^0.12.5",
     "lodash": "4.15.0",
     "minimist": "1.2.0",
     "moment": "^2.15.1",
@@ -230,6 +233,7 @@
     "redux-immutable": "3.0.8",
     "redux-saga": "0.11.1",
     "sanitize.css": "4.1.0",
+    "sqlite3": "^3.1.6",
     "warning": "3.0.0",
     "whatwg-fetch": "1.0.0"
   },
