--- a/package.json
+++ b/package.json
@@ -196,7 +196,8 @@
       "express",
       "ip",
       "minimist",
-      "sanitize.css"
+      "sanitize.css",
+      "bootstrap-css-only"
     ],
     "include": [
       "core-js",
@@ -222,9 +223,12 @@
     "minimist": "1.2.0",
     "moment": "^2.15.1",
     "react": "15.3.1",
+    "bootstrap-css-only": "3.3.6",
+    "react-bootstrap": "^0.30.5",
     "react-dom": "15.3.1",
     "react-helmet": "3.1.0",
     "react-intl": "2.1.5",
+    "react-modal": "^1.5.2",
     "react-redux": "4.4.5",
     "react-router": "2.8.1",
     "react-router-redux": "4.0.5",
