--- a/package.json
+++ b/package.json
@@ -209,6 +209,7 @@
     "axios": "^0.15.0",
     "babel-polyfill": "6.13.0",
     "bookshelf": "^0.10.2",
+    "bootstrap-css-only": "3.3.6",
     "chalk": "1.1.3",
     "compression": "1.6.2",
     "cross-env": "2.0.1",
@@ -223,7 +224,6 @@
     "minimist": "1.2.0",
     "moment": "^2.15.1",
     "react": "15.3.1",
-    "bootstrap-css-only": "3.3.6",
     "react-bootstrap": "^0.30.5",
     "react-dom": "15.3.1",
     "react-helmet": "3.1.0",
@@ -234,6 +234,7 @@
     "react-router-redux": "4.0.5",
     "react-router-scroll": "0.3.2",
     "redux": "3.6.0",
+    "redux-form": "^6.1.1",
     "redux-immutable": "3.0.8",
     "redux-saga": "0.11.1",
     "sanitize.css": "4.1.0",
