feat: [WIP] Mostly finish Update Contact story
The frontend 'Edit Contact' UI now updates the db and gets a response from the server. Now I need to work on what happens to the UI while the request is pending, and when it's successful or unsuccessful.

--- a/package.json
+++ b/package.json
@@ -208,6 +208,7 @@
   "dependencies": {
     "axios": "^0.15.0",
     "babel-polyfill": "6.13.0",
+    "body-parser": "^1.15.2",
     "bookshelf": "^0.10.2",
     "bootstrap-css-only": "3.3.6",
     "chalk": "1.1.3",
