--- a/package.json
+++ b/package.json
@@ -215,11 +215,13 @@
     "compression": "1.6.2",
     "cross-env": "2.0.1",
     "express": "4.14.0",
+    "express-jwt": "^5.1.0",
     "fontfaceobserver": "2.0.4",
     "immutable": "3.8.1",
     "intl": "1.2.4",
     "invariant": "2.2.1",
     "ip": "1.1.3",
+    "jsonwebtoken": "^7.1.9",
     "knex": "^0.12.5",
     "lodash": "4.15.0",
     "minimist": "1.2.0",
