--- a/package.json
+++ b/package.json
@@ -214,6 +214,7 @@
     "chalk": "1.1.3",
     "compression": "1.6.2",
     "cross-env": "2.0.1",
+    "draft-js": "^0.9.1",
     "express": "4.14.0",
     "express-jwt": "^5.1.0",
     "fontfaceobserver": "2.0.4",
