--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
         2,
         "always-multiline"
       ],
+      "func-names": 0,
       "import/imports-first": 0,
       "import/newline-after-import": 0,
       "import/no-extraneous-dependencies": 0,
@@ -141,6 +142,7 @@
       "newline-per-chained-call": 0,
       "no-console": 1,
       "no-use-before-define": 0,
+      "no-underscore-dangle": 0,
       "prefer-template": 2,
       "class-methods-use-this": 0,
       "react/forbid-prop-types": 0,
