--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.babel.js --color -p",
     "build:clean": "npm run test:clean && rimraf ./build",
     "build:dll": "node ./internals/scripts/dependencies.js",
-    "start": "cross-env NODE_ENV=development node server",
+    "start": "cross-env NODE_ENV=development nodemon server",
     "start:tunnel": "cross-env NODE_ENV=development ENABLE_TUNNEL=true node server",
     "start:production": "npm run build && npm run start:prod",
     "start:prod": "cross-env NODE_ENV=production node server",
@@ -220,6 +220,8 @@
     "express": "4.14.0",
     "express-jwt": "^5.1.0",
     "fontfaceobserver": "2.0.4",
+    "google-auth-library": "^0.10.0",
+    "googleapis": "^20.1.0",
     "immutable": "3.8.1",
     "intl": "1.2.4",
     "invariant": "2.2.1",
